--- a/style/style.css
+++ b/style/style.css
@@ -53,3 +53,95 @@ a.menu:hover {
 .appview-container .main .block-container {
   max-width: 1000px;
 }
+
+.button {
+  color: white !important;
+  text-decoration: none !important;
+  border-radius: 5px;
+  height: 3em;
+  width: 100% !important;
+  display: inline-flex;
+  -webkit-box-align: center;
+  align-items: center;
+  -webkit-box-pack: center;
+  justify-content: center;
+  font-weight: 400;
+  padding-top: 0.25rem;
+  padding-bottom: 0.25rem;
+  padding-right: 0.75rem;
+  padding-left: 0.75rem;
+  border-top-left-radius: 0.25rem;
+  border-top-right-radius: 0.25rem;
+  border-bottom-right-radius: 0.25rem;
+  border-bottom-left-radius: 0.25rem;
+  margin-top: 0px;
+  line-height: 1.6;
+  color: inherit;
+  width: auto;
+  -webkit-user-select: none;
+  background-color: rgb(19, 23, 32);
+  border-top-width: 1px;
+  border-right-width: 1px;
+  border-bottom-width: 1px;
+  border-left-width: 1px;
+  border-top-style: solid;
+  border-right-style: solid;
+  border-bottom-style: solid;
+  border-left-style: solid;
+  border-top-color: rgba(250, 250, 250, 0.2);
+  border-right-color: rgba(250, 250, 250, 0.2);
+  border-bottom-color: rgba(250, 250, 250, 0.2);
+  border-left-color: rgba(250, 250, 250, 0.2);
+  border-image-source: initial;
+  border-image-slice: initial;
+  border-image-width: initial;
+  border-image-outset: initial;
+  border-image-repeat: initial;
+}
+
+.button:hover {
+  color: rgb(255, 75, 75) !important;
+  text-decoration: none;
+  border-radius: 5px;
+  height: 3em;
+  width: 100% !important;
+  display: inline-flex;
+  -webkit-box-align: center;
+  align-items: center;
+  -webkit-box-pack: center;
+  justify-content: center;
+  font-weight: 400;
+  padding-top: 0.25rem;
+  padding-bottom: 0.25rem;
+  padding-right: 0.75rem;
+  padding-left: 0.75rem;
+  border-color: rgb(255, 75, 75) !important;
+  color: rgb(255, 75, 75) !important;
+  border-top-left-radius: 0.25rem;
+  border-top-right-radius: 0.25rem;
+  border-bottom-right-radius: 0.25rem;
+  border-bottom-left-radius: 0.25rem;
+  margin-top: 0px;
+  line-height: 1.6;
+  color: inherit;
+  width: auto;
+  -webkit-user-select: none;
+  background-color: rgb(19, 23, 32);
+  border-top-width: 1px;
+  border-right-width: 1px;
+  border-bottom-width: 1px;
+  border-left-width: 1px;
+  border-top-style: solid;
+  border-right-style: solid;
+  border-bottom-style: solid;
+  border-left-style: solid;
+  border-top-color: rgba(250, 250, 250, 0.2);
+  border-right-color: rgba(250, 250, 250, 0.2);
+  border-bottom-color: rgba(250, 250, 250, 0.2);
+  border-left-color: rgba(250, 250, 250, 0.2);
+  border-image-source: initial;
+  border-image-slice: initial;
+  border-image-width: initial;
+  border-image-outset: initial;
+  border-image-repeat: initial;
+}
